--- a/다이어리/diary-edit.css
+++ b/다이어리/diary-edit.css
@@ -330,19 +330,19 @@
   width: 1130px;
 }
 
-.comment_input{
+.comment_input {
   display: flex;
   padding: 12px 16px;
   align-items: center;
   gap: 10px;
   flex: 1 0 0;
   border-radius: 8px;
-  border: 1px solid var(--Gray-Gray-200, #D4D3D3);
-  background: var(--Gray-Gray-50, #F2F2F2);
+  border: 1px solid var(--Gray-Gray-200, #d4d3d3);
+  background: var(--Gray-Gray-50, #f2f2f2);
 }
 
 .comment_input::placeholder {
-  color: var(--Gray-Gray-400, #ABABAB);
+  color: var(--Gray-Gray-400, #ababab);
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -360,7 +360,7 @@
   gap: 10px;
   border-radius: 8px;
   background: var(--Gray-B, #000);
-  color: var(--Gray-W, #FFF);
+  color: var(--Gray-W, #fff);
   font-size: 18px;
   font-style: normal;
   font-weight: 600;
@@ -397,5 +397,5 @@
 .comment_divider {
   width: 1168px;
   height: 1px;
-  background: var(--Gray-Gray-100, #E4E4E4);
+  background: var(--Gray-Gray-100, #e4e4e4);
 }
