--- a/다이어리/diary.css
+++ b/다이어리/diary.css
@@ -565,8 +565,11 @@ ul li {
   font-weight: 300;
   letter-spacing: -0.14px;
 }
-.topScroll {
+.topScrollBox {
   position: sticky;
-  top: 0px;
-  
+  width: 1120px;
+}
+.topScroll {
+  top: 0;
+  right: -1090px;
 }
