--- a/homework/section3/css/detail.css
+++ b/homework/section3/css/detail.css
@@ -275,3 +275,90 @@ body {
 .수정하기_버튼:active {
   transform: rotate(30deg);
 }
+
+.회고_영역 {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+}
+
+.입력_영역 {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 13px;
+  align-self: stretch;
+}
+
+.회고_레이블 {
+  width: 100%;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 24px;
+}
+
+.회고_인풋_영역 {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  gap: 16px;
+
+}
+
+.회고_인풋 {
+  display: flex;
+  padding: 12px 16px;
+  align-items: center;
+  gap: 10px;
+  flex: 1 0 0;
+  border-radius: 8px;
+  border: 1px solid var(--Gray-Gray-200, #D4D3D3);
+  background: var(--Gray-W, #FFF);
+}
+
+.회고_입력_버튼 {
+  color: white;
+  display: flex;
+  height: 48px;
+  padding: 8px 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10px;
+  border-radius: 8px;
+  background: var(--Gray-B, #000);
+}
+
+.보기_영역 {
+  display: flex;
+  max-width: 1168px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 12px;
+}
+
+.회고_댓글_영역 {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  gap: 8px 12px;
+  flex-wrap: wrap;
+}
+
+.회고_댓글 {
+  color: #000;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+}
+
+.회고_날짜 {
+  color: var(--Gray-Gray-600, #777);
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+}
