--- a/css-js/homework/diary-savor/diary-saver.css
+++ b/css-js/homework/diary-savor/diary-saver.css
@@ -59,18 +59,32 @@ body {
 /* content */
 .content {
   width: 100%;
+  height: 160vh;
+  margin-bottom: 40px;
+}
+
+.menubar {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 32px;
+  align-self: stretch;
+  margin-bottom: 48px;
+
+  position: sticky;
+  top: 0px;
+  z-index: 100;
+  backdrop-filter: blur(30px);
 }
 
 /* menu */
 .menu {
   min-width: 204px;
   height: 48px;
-  margin-bottom: 42px;
   padding: 12px 8px;
   display: flex;
   align-items: center;
   gap: 16px;
-  flex: 1 0 0;
 }
 
 .menu button {
@@ -83,6 +97,12 @@ body {
   letter-spacing: -0.24px;
   border: none;
   background-color: transparent;
+  gap: 10px;
+  padding: 12px 8px;
+}
+
+.menu button:first-child {
+  border-bottom: 2px solid #000;
 }
 
 .menu button:last-child {
@@ -96,10 +116,74 @@ body {
   margin-left: 16px;
 }
 
+/* menu - toolbar */
+.tool-bar {
+  display: flex;
+  min-width: 320px;
+  max-width: 1168px;
+  padding: 12px 8px;
+  justify-content: flex-end;
+  align-items: flex-end;
+  align-content: flex-end;
+  gap: 16px 8px;
+  align-self: stretch;
+  flex-wrap: wrap;
+}
+
+.dropdown-tool-bar {
+  display: flex;
+  min-width: 320px;
+  align-items: center;
+  align-content: center;
+  gap: 16px;
+  flex: 1 0 0;
+  flex-wrap: wrap;
+}
+
+.emotions {
+  display: flex;
+  min-width: 120px;
+  padding: 4px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+
+  border-radius: 8px;
+  border: 1px solid var(--Gray-Gray-300, #c7c7c7);
+  background: var(--Gray-W, #fff);
+
+  color: var(--Gray-Gray-900, #1c1c1c);
+  font-family: "Pretendard Variable";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
+  letter-spacing: -0.16px;
+}
+
+.emotions option {
+  display: flex;
+  min-width: 120px;
+  flex-direction: column;
+  align-items: flex-start;
+
+  border-radius: 8px;
+  border: 1px solid var(--Gray-Gray-300, #c7c7c7);
+  background: var(--Gray-Gray-100, #e4e4e4);
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+
+  color: var(--Gray-B, #000);
+  font-family: "Pretendard Variable";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
+  letter-spacing: -0.16px;
+}
+
 /* main-container */
 .main-container {
   max-width: 1168px;
-  margin-bottom: 40px;
   display: flex;
   justify-content: flex-start;
   gap: 24px;
@@ -123,7 +207,6 @@ body {
   flex-wrap: wrap;
   min-width: 750px;
   max-width: 784px;
-  min-height: 350px;
   justify-content: space-between;
   gap: 24px;
   align-self: stretch;
@@ -133,6 +216,7 @@ body {
   /* test */
   min-width: 350px;
   max-width: 350px;
+  max-height: 380px;
   padding-bottom: 16px;
   flex: 1 0 0;
   transition: 0.5s;
@@ -159,11 +243,17 @@ body {
   padding: 12px;
   background-size: contain;
   border-radius: 16px;
+  position: relative;
 
   background-color: lightgray;
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.delete-card-board {
+  position: absolute;
+  right: 12px;
 }
 
 .post-preview {
@@ -366,6 +456,23 @@ body {
   letter-spacing: -0.18px;
 }
 
+/* scroll-top */
+.scroll-top {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+
+  fill: rgba(255, 255, 255, 0.9);
+  stroke-width: 1px;
+  stroke: var(--Gray-Gray-50, #f2f2f2);
+}
+
+.scroll-top button {
+  border: none;
+  background-color: transparent;
+}
+
 /* footer */
 .footer {
   width: 100%;
@@ -493,30 +600,102 @@ body {
   justify-content: space-between;
   align-items: center;
   align-self: stretch;
-}
-
-.detail-title p:first-child {
-  color: #ea5757;
-  font-family: "Pretendard Variable";
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 24px; /* 120% */
-  letter-spacing: -0.2px;
-}
-
-.detail-title p:last-child {
-  color: var(--Gray-Gray-500, #919191);
-  font-family: "Pretendard Variable";
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 20px; /* 142.857% */
-  letter-spacing: -0.14px;
+  text-align: center;
 }
 
 .detail-menu {
   display: flex;
   flex-direction: row;
   align-items: center;
+  text-align: center;
+}
+
+.detail-menu-emotion {
+  margin-left: 8px;
+  color: #ea5757;
+  font-family: "Pretendard Variable";
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: -0.2px;
+}
+
+.detail-info {
+  color: var(--Gray-Gray-500, #919191);
+  font-family: "Pretendard Variable";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: -0.14px;
+}
+
+.detail-info p:first-child {
+  margin-right: 8px;
+}
+
+.detail-content {
+  display: flex;
+  max-width: 1168px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+  align-self: stretch;
+}
+
+.detail-content p:first-child {
+  color: #000;
+  font-family: "Pretendard Variable";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 20px; /* 125% */
+  letter-spacing: -0.16px;
+}
+
+.detail-content p:last-child {
+  color: var(--Gray-Gray-800, #333);
+  font-family: "Pretendard Variable";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px; /* 125% */
+  letter-spacing: -0.16px;
+}
+
+.detail-btn {
+  display: flex;
+  max-width: 1168px;
+  justify-content: flex-end;
+  align-items: center;
+  padding-bottom: 16px;
+  gap: 16px;
+  align-self: stretch;
+  border-bottom: 1px solid var(--Gray-B, #000);
+}
+
+.detail-btn button {
+  display: flex;
+  padding: 8px 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 10px;
+
+  border-radius: 8px;
+  border: 1px solid var(--Gray-Gray-200, #d4d3d3);
+  background: var(--Gray-W, #fff);
+
+  color: var(--Gray-Gray-900, #1c1c1c);
+  font-family: "Pretendard Variable";
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 133.333% */
+  letter-spacing: -0.18px;
+}
+
+.detail-btn button:hover {
+  background-color: var(--Gray-Gray-900, #d4d3d3);
 }
