--- a/homework/css/homework2.css
+++ b/homework/css/homework2.css
@@ -6,7 +6,7 @@
 html,
 body {
   width: 100vw;
-  height: 100vh;
+  height: auto;
 }
 .wrapper {
   height: auto;
@@ -33,6 +33,8 @@ header {
   font-weight: 700;
   line-height: 16px;
   margin-left: 5px;
+  text-decoration: none;
+  color: #000000;
 }
 
 /* 메인 */
@@ -117,6 +119,12 @@ main {
   width: 100%;
   height: 40px;
 }
+.filter {
+  width: 112px;
+  height: 24px;
+  border-radius: 8px;
+  border: 1px solid #a2a2a2;
+}
 
 #library {
   width: 784px;
@@ -184,6 +192,7 @@ main {
   border-radius: 16px;
   padding: 24px;
   border: 1px solid #d4d3d3;
+  position: relative;
 }
 .write-title-area {
   width: 100%;
@@ -206,17 +215,17 @@ main {
   padding: 0 10px;
 }
 .feeling-title {
-  font-size: 20px;
+  font-size: 22px;
   font-weight: 600;
   line-height: 24px;
 }
 .feeling-choose {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 500;
   line-height: 20px;
   display: flex;
   flex-wrap: wrap;
-  gap: 12px;
+  gap: 8px;
   color: #333333;
 }
 .text-area {
@@ -309,6 +318,15 @@ main {
 .tab__content.active {
   display: block;
 }
+.scroll-up {
+  /* background-color: #28b4e1; */
+  position: sticky;
+  width: 43px;
+  top: 1270px;
+  left: 1820px;
+  cursor: pointer;
+  z-index: 1;
+}
 
 /* 푸터 */
 footer {
@@ -337,57 +355,4 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-}
-
-/*일기 상세보기*/
-
-.diary-wrap {
-  width: 100%;
-  height: auto;
-
-  display: flex;
-  justify-content: center;
-}
-
-.diary-container {
-  width: 1168px;
-
-  display: flex;
-  flex-direction: column;
-}
-
-.diary-container > h1 {
-  font-size: 24px;
-  padding-bottom: 8px;
-  border-bottom: 2px solid black;
-}
-
-.user-info {
-  display: flex;
-  justify-content: space-between;
-
-  padding: 10px 0px;
-}
-
-.diary-container > h2 {
-  font-size: 18px;
-}
-
-.diary-content {
-  padding: 10px 0px;
-}
-
-.edit-button {
-  background-color: #fff;
-  border-radius: 4px;
-  border: 1px solid #d4d4d4;
-  margin-top: 10px;
-  width: 44px;
-  height: 30px;
-
-  align-self: flex-end;
-}
-
-.disable {
-  display: none !important;
 }
