--- a/[240829]_section01/detail.css
+++ b/[240829]_section01/detail.css
@@ -61,20 +61,151 @@
     .detailContent {
       margin-bottom: 20px;
       line-height: 20px;
+      margin-top: 10px;
     }
-    .btns {
+    .firstBtn {
       display: flex;
       justify-content: flex-end;
       gap: 10px;
-      button {
-        padding: 3px 8px;
+      margin-bottom: 20px;
+      .btn {
+        padding: 5px 10px;
         border-radius: 3px;
-        border: 1px solid #919191;
+        border: 1px solid beige;
+        background-color: beige;
       }
       button:hover {
         background-color: #f4bdbd;
         cursor: pointer;
       }
     }
+    .feelingBtn {
+      flex-wrap: wrap;
+      display: flex;
+      justify-content: flex-start;
+      gap: 20px;
+      margin-bottom: 15px;
+    }
+  }
+}
+#addContent {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  gap: 12px;
+
+  opacity: 0px;
+
+  .addTitle {
+    font-size: 18px;
+    font-weight: 500;
+  }
+  .subTitle {
+    font-size: 18px;
+    font-weight: 500;
+  }
+
+  .titleContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+    margin-bottom: 15px;
+    p {
+      font-size: 18px;
+    }
+    #titleContent {
+      border: 1px solid #d4d3d3;
+      border-radius: 8px;
+      padding: 8px 5px;
+      width: 100%;
+      font-size: 15px;
+    }
+  }
+  .contentContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+    margin-bottom: 20px;
+    p {
+      font-size: 18px;
+    }
+    #contentContainer {
+      width: 100%;
+      border: 1px solid #d4d3d3;
+      border-radius: 8px;
+      padding: 8px 5px;
+      font-size: 15px;
+    }
+  }
+  #registerBtn {
+    background-color: #c7c7c7;
+    border: none;
+    border-radius: 8px;
+    padding: 8px 10px;
+    color: white;
+  }
+}
+.btns {
+  display: flex;
+  justify-content: center;
+
+  gap: 10px;
+  button {
+    padding: 5px 10px;
+    border-radius: 3px;
+  }
+  .prevBtn {
+    border: 1px solid beige;
+    background-color: beige;
+  }
+  .saveBtn {
+    border: 1px solid rgb(126, 150, 212);
+    background-color: rgb(126, 150, 212);
+    color: white;
+  }
+  button:hover {
+    background-color: #f4bdbd;
+    cursor: pointer;
+  }
+}
+
+.commentsSection {
+  /* margin-top: 20px; */
+  .subInfo {
+    margin: 20px 0;
+  }
+  .commentContainer {
+    display: flex;
+    gap: 10px;
+    #commentInput {
+      flex: 1;
+      padding: 7px 8px;
+      border: 1px solid #d4d3d3;
+      border-radius: 4px;
+    }
+    #addCommentBtn {
+      padding: 9px;
+      background-color: black;
+      color: white;
+      border: none;
+      border-radius: 4px;
+    }
+  }
+}
+
+#commentList {
+  list-style: none;
+  margin-top: 10px;
+
+  li {
+    display: flex;
+    gap: 20px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid #d4d3d3;
+    margin-bottom: 10px;
+    padding: 5px;
   }
 }
