--- a/myDiary.css
+++ b/myDiary.css
@@ -4,7 +4,14 @@
     padding: 0;
     color: #222;
     font-size: 16px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Pretendard-Regular';
+}
+
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
 }
 
 a {
@@ -29,38 +36,25 @@ a {
 }
 
 .container__nav {
-    height: 126px;
-    width: 1200px;
-    padding: 0px 26px;
+    width: 100vw;
+    height: 150px;
     background-color: #FCFCFC;
-    border-radius: 16px;
     gap: 10px;
     margin: 24px 0px 42px 0px;
-    justify-content: flex-start;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     position: sticky;
     top: 0px;
     z-index: 2;
+    box-shadow: 0px 5px 0px 0px #fff;
 }
 
 .nav__tap__bar {
     display: flex;
-    flex-direction: row;
     margin-bottom: 32px;
-}
-
-.nav__filter__bar {
-    display: flex;
-    align-items: center;
-    background-color: #FCFCFC;
-}
-
-.nav__filter {
-    width: 120px;
-    height: 32px;
-    background-color: #fff;
-    border-radius: 8px;
-    font-size: 20px;
-    padding: 2px 4px;
+    width: 1168px;
+    justify-content: flex-start;
 }
 
 .tap__active, .tap__disabled {
@@ -77,14 +71,30 @@ a {
     border: none;
 }
 
-.container__content {
+.nav__filter__bar {
+    display: flex;
+    align-items: center;
+    width: 1168px;
+    justify-content: flex-start;
+}
+
+.nav__filter {
+    width: 120px;
+    height: 32px;
+    background-color: #fff;
+    border-radius: 8px;
+    font-size: 20px;
+    padding: 2px 4px;
+}
+
+.container__body {
     width: 1168px;
     display: flex;
     gap: 24px;
     margin-bottom: 40px;
 }
 
-.content__left__card {
+.body__left__card {
     width: 820px;
     display: flex;
     flex-wrap: wrap;
@@ -139,7 +149,7 @@ a {
     margin-bottom: 8px;
 }
 
-.card__sad, .card__surprise, .card__angry, .card__happy, .card__etc, .card__date {
+.card__mood, .card__sad, .card__surprise, .card__angry, .card__happy, .card__etc, .card__date {
     font-size: 14px;
     font-weight: 200;
 }
@@ -153,14 +163,14 @@ a {
 }
 
 .card__angry {
-    color: #767676;
+    color: #222;
 }
 
 .card__happy {
     color: #EA5757;
 }
 
-.card__think {
+.card__etc {
     color: #A229ED;
 }
 
@@ -173,7 +183,7 @@ a {
     font-weight: 600;
 }
 
-.content__right__diary {
+.body__right__diary {
     width: 360px;
     height: 100%;
     padding: 24px;
@@ -182,7 +192,7 @@ a {
     background-color: #FFF;
 }
 
-.diary__title {
+.diary__subject {
     font-size: 24px;
     margin-bottom: 40px;
 }
@@ -200,12 +210,12 @@ a {
     margin-bottom: 40px;
 }
 
-.diary__subject, .diary__context {
+.diary__title, .diary__content {
     font-size: 20px;
     margin-bottom: 8px;
 }
 
-.diary__subInput, .diary__conInput {
+.diary__titleInput, .diary__contentInput {
     width: 100%;
     height: 48px;
     border: 1px solid #eee;
@@ -214,7 +224,7 @@ a {
     margin-bottom: 24px;
 }
 
-.diary__conInput {
+.diary__contentInput {
     height: 128px;
     margin-bottom: 40px;
 }
@@ -248,6 +258,10 @@ a {
     box-shadow: 0px 1px 6px 0px #767676;
     right: 2%;
     bottom: 2%;
+}
+
+.container__floating:hover {
+    background-color: #ff7700;
 }
 
 .container__footer {
