💄 style: 플로팅 버튼 box-shadow 추가

--- a/section03/css/common.css
+++ b/section03/css/common.css
@@ -151,6 +151,7 @@
   background-color: var(--gray-w);
   border: 1px solid var(--gray-50);
   border-radius: 100%;
+  box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.3);
 }
 
 .footer {
