♻️ refactor: 스크롤 시 필터 스타일 클래스명으로 제어하도록 수정

--- a/section03/css/index.css
+++ b/section03/css/index.css
@@ -59,6 +59,8 @@
 }
 
 .filter-emotion.scrolled {
+  color: var(--gray-w);
+  background-color: var(--gray-b);
   background-image: url('../assets/images/icon_arrow_down_scrolled.svg');
 }
 
