--- a/01-diary/index.css
+++ b/01-diary/index.css
@@ -5,8 +5,11 @@
 }
 
 .header {
+    width: 100%;
     display: flex;
     justify-content: center;
+
+    padding: 0px 20px 0px 20px;
 }
 
 .header_title {
@@ -21,8 +24,11 @@
 }
 
 .banner {
+    width: 100%;
     display: flex;
     justify-content: center;
+
+    padding: 0px 20px 0px 20px;
 }
 
 .banner_img {
@@ -80,9 +86,15 @@
 }
 
 .filter_item {
+    width: 1186px;
     position: sticky;
     top: 10px;
     z-index: 10;
+    padding: 0px 20px 0px 20px;
+}
+
+#filter_item_mobile {
+    display: none;
 }
 
 .mood_select_box {
@@ -98,6 +110,8 @@
 .contents {
     display: flex;
     gap: 24px;
+
+    padding: 0px 20px 0px 20px;
 }
 
 .contents_left_item {
@@ -155,6 +169,7 @@
 }
 
 .diary_title {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -163,6 +178,7 @@
 }
 
 .diary_sub_title {
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -212,7 +228,7 @@
 
 /* 가운데 내용의 오른쪽 "일기 쓰기" 아이템 배치 */
 .contents_right_item {
-    height: 604px;
+    width: 360px;
 
     padding: 24px;
 
@@ -225,6 +241,7 @@
 }
 
 .write_title {
+    width: 100%;
     font-weight: 700;
     font-size: 24px;
 
@@ -232,7 +249,7 @@
 }
 
 .write_diary {
-    width: 312px;
+    width: 100%;
     height: 404px;
 
     display: flex;
@@ -241,7 +258,7 @@
 }
 
 .write_mood_select {
-    width: 312px;
+    width: 100%;
     height: 108px;
     display: flex;
     flex-direction: column;
@@ -249,7 +266,7 @@
 }
 
 .write_mood_select_title {
-    width: 312px;
+    width: 100%;
     height: 24px;
 
     color: black;
@@ -293,7 +310,7 @@
 }
 
 .diary_title_input {
-    width: 312px;
+    width: 100%;
     height: 76px;
 
     display: flex;
@@ -302,7 +319,7 @@
 }
 
 .diary_text_input {
-    width: 312px;
+    width: 100%;
     height: 156px;
     display: flex;
     flex-direction: column;
@@ -310,13 +327,14 @@
 }
 
 .diary_title_input_title {
+    width: 100%;
     font-weight: 500;
     font-size: 14px;
     color: #333333;
 }
 
 .diary_title_input_text {
-    width: 312px;
+    width: 100%;
     height: 48px;
     border: 1px solid #D4D3D3;
     border-radius: 8px;
@@ -324,7 +342,7 @@
 }
 
 .diary_title_input_textarea {
-    width: 312px;
+    width: 100%;
     height: 128px;
     border: 1px solid #D4D3D3;
     border-radius: 8px;
@@ -357,6 +375,7 @@
 /* 바닥글 영역 */
 
 .footer {
+    margin-top: 24px;
     background-color: #F2F2F2;
 
     display: flex;
